# ohms-econ

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.github/workflows/: ci.yml
src/: api.rs  lib.rs  ohms_econ.did
src/domain/: mod.rs
src/infra/: guards.rs  metrics.rs  mod.rs
src/ohms-econ-backend/: Cargo.toml
src/ohms-econ-frontend/: package.json
src/ohms-econ-frontend/src/: App.js
src/services/: balance.rs  escrow.rs  estimation.rs  mod.rs  payment.rs  settlement.rs  subscription.rs
