[package]
name = "ohms_econ"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
thiserror = "1.0"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }

# ICP payment processing dependencies
icp-ledger-types = "0.18"
ic-ledger-types = "0.18"
dfn_candid = "0.15"

# OHMS dependencies (only for non-wasm targets to avoid pulling heavy native deps in canisters)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ohms-adaptq = { path = "../ohms-adaptq" }